seller app api modify
