# src/index.ts
@@ -2,7 +2,9 @@ import bodyParser from 'body-parser';
 import cors from 'cors';
 import dotenv from 'dotenv';
 import express from 'express';
+import { createServer } from 'http';
 import { jiffy } from './config/sequelize.js';
+import { initSocket } from './services/socket/socket.service.js';
 import authRouter from './routes/auth.js';
 const app = express();
 
@@ -17,6 +19,7 @@ import profileRouter from "./routes/profile.js";
 import sellerRouter from './routes/seller.js';
 import storeRouter from './routes/store.js';
 import wishlistRouter from './routes/wishlist.js';
+import notificationRouter from './routes/notification.js';
 import { globalErrorHandler } from './middleware/errorHandler.js';
 
 
@@ -52,6 +55,7 @@ app.use("/api/products", productRouter)
 app.use("/api/orders", orderRouter)
 app.use("/api/location", locationRouter)
 app.use("/api/wishlist", wishlistRouter)
+app.use("/api/notifications", notificationRouter)
 app.use("/api/seller", sellerRouter)
 app.use("/api/admin", adminRouter)
 app.use("/api", paymentRouter)
@@ -64,8 +68,10 @@ const startServer = async () => {
 		await jiffy.sync({ alter: true });
 		console.log('Connection to both databases has been established successfully.');
 		const port = process.env.PORT || 3000;
-		app.listen(port, () => {
-			console.log(`PORT is running on ${port}`);
+		const server = createServer(app);
+		initSocket(server);
+		server.listen(port, () => {
+			console.log(`PORT is running on ${port} with WebSockets enabled`);
 		});
 	} catch (error) {
 		console.error('Unable to connect to the databases:', error);
